--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} LAAMAKALA
 
-\textit{A valley of secrets long forgotten. Its heart belongs to the beasts of old, while its fringes lure the bold and the desperate. Fight for power, claim the land, or perish like those before you.}
+\textit{A valley of secrets long forgotten. Its heart belongs to the beasts of old. Fight for power, claim the land, or perish like those before you.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 13 Rounds.
@@ -30,17 +30,19 @@ This Scenario plays out over 13 Rounds.
   \item Each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
+\textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
+
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
-  \item 3P × Far (II–III) Map Tiles
   \item 2P × Near (IV–V) Map Tiles
   \item P × Center (VI–VII) Map Tile
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
+\columnbreak
 \textbf{Additionally, for 4 players:}
 \begin{itemize}
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
@@ -70,7 +72,7 @@ If no one controls a Dragon Utopia, all players lose.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Remove all Black Cubes from the Map.
 \end{itemize}
 \textbf{End of \nth{10} Round:}
 \begin{itemize}
@@ -79,7 +81,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Grail Token}: When a player gains or starts their turn with it, they gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
+  \item \textbf{Grail Token}: When a player gains or starts their turn with it, they gain +1 \svg{morale_positive} and Search (4) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
   \item After winning a Combat against another player's Main Hero, draw up to your Hand Limit and discard 1 Card.
@@ -94,21 +96,21 @@ If no one controls a Dragon Utopia, all players lose.
 
 \begin{center}
   \vspace*{\fill}
-  \includegraphics[width=0.72\linewidth]{\maps/dragon-valley-2p.png}
+  \includegraphics[width=0.8\linewidth]{\maps/dragon-valley-2p.png}
   \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
 \end{center}
 
 \begin{itemize}
-  \item When a \textbf{Secondary Hero} is recruited, you gain an additional Empowerment and one of each: Attack, Defense and Power Statistic Cards, and a Magic Arrow. These may only be used by your Secondary Hero.
+  \item When a \textbf{Secondary Hero} is recruited, you gain an additional Empowerment and one of each: Attack, Defense, and Power Statistic Cards, and a Magic Arrow. These may only be used by your Secondary Hero.
   \item When a Secondary Hero starts their turn on a I or II--III Map Tile, they gain +1~\svg{movement}.
 \end{itemize}
 
 \begin{center}
   \vspace*{\fill}
-  \includegraphics[width=0.8\linewidth]{\maps/dragon-valley-3p.png}
+  \includegraphics[width=0.85\linewidth]{\maps/dragon-valley-3p.png}
   \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
   \vspace*{\fill}
-  \includegraphics[width=1.0\linewidth]{\maps/dragon-valley-4p.png}
+  \hspace*{-2.5em}\includegraphics[width=1.15\linewidth]{\maps/dragon-valley-4p.png}
   \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
 \end{center}
 
