--- a/draft-scenarios/clash/blood_ore.tex
+++ b/draft-scenarios/clash/blood_ore.tex
@@ -13,9 +13,9 @@ This Scenario plays out over 8-10 Rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 4
 
-\textbf{Starting Resources:} 15 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 16 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Income:} 15 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -25,7 +25,6 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
-  \item Citadel
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -51,9 +50,9 @@ When a player captures their \nth{6} mine or settlement, all players -- includin
 \end{itemize}
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Players gain income every Round.
   \item A Secondary Hero starting their turn on I or II-III Map Tile gains +1 \svgeven{movement}.
-  \item \textbf{Obelisks:} Choose one adjacent Visitable Field and gain its reward.
+  \item \textbf{Obelisk:} Choose one adjacent Visitable Field and gain its reward. \textit{Visitable once per Faction.}
+  \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
 \end{itemize}
 
 \begin{center}
