--- a/draft-scenarios/clash/blood_ore.tex
+++ b/draft-scenarios/clash/blood_ore.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} LAAMAKALA
 
-\textit{There is no honor — only victory or death. The weak will fall, the strong will fight, and only one will rule.}
+\textit{No diplomacy. No allies. Only pickaxes and blades — and neither rests for long.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 8-10 Rounds.
