--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} LAAMAKALA
+\textbf{Author:} Laamakala
 
 \textit{Every move could be your last. Every gate a gamble. Glory belongs to the bold.}
 
