--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} LAAMAKALA
+\textbf{Author:} Laamakala
 
 \textit{A valley of secrets long forgotten. Its heart belongs to the beasts of old. Fight for power, claim the land, or perish like those before you.}
 
