--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} Pinkerton, biigrick, LAAMAKALA
+\textbf{Author:} Pinkerton, biigrick, Laamakala
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1232319328049954826}{Archon Studio's Discord}
 
