--- a/draft-scenarios/clash/blood_for_ore.tex
+++ b/draft-scenarios/clash/blood_for_ore.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} LAAMAKALA
+\textbf{Author:} Laamakala
 
 \textit{No diplomacy. No allies. Only pickaxes and blades — and neither rests for long.}
 
