--- a/translations/emerald_island.tex/de.po
+++ b/translations/emerald_island.tex/de.po
@@ -5,9 +5,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2025-06-22 00:57+0200\n"
-"PO-Revision-Date: 2025-06-23 13:02+0000\n"
+"PO-Revision-Date: 2025-07-16 18:04+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/coop-scenarios/emerald_island/de/>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.13-dev\n"
+"X-Generator: Poedit 3.6\n"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -203,6 +203,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Emerald Island}{\\images/"
 "logistics.png}"
 msgstr ""
+"\\addscenariosection{1}{Kooperatives Szenario}{Smaragdinsel}{\\images/"
+"logistics.png}"
 
 #. type: multicols
 #: coops/emerald_island.tex:9
@@ -211,6 +213,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1222679455261261986}{Archon Studio Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Quelle:} \\href{https://discord.com/channels/740870068178649108/1222679455261261986}{Archon Studio Discord}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:14
@@ -222,6 +226,11 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
+"\\textit{Lord Markham hat beschlossen, eine Schatzsuche zu organisieren und du und deine Freunde nehmt teil.\n"
+"  Aber beeilt euch! Andere Teams sind ebenfalls unterwegs und eines ist bald am Ziel!\n"
+"  Und vor allem: Vorsicht! Es scheint, eine als Drache identifizierte Kreatur lauert auf dieser Insel!}\n"
+"\\subsection*{\\MakeUppercase{Szenariolänge}}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:16
@@ -230,6 +239,8 @@ msgid ""
 "This Scenario is played over 8 Rounds.\n"
 "\n"
 msgstr ""
+"8 Runden\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:20
@@ -238,6 +249,8 @@ msgid ""
 "\\textbf{Player Count:} 1 -- 4\n"
 "\n"
 msgstr ""
+"\\textbf{Spieleranzahl:} 1 -- 4\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:22
@@ -246,6 +259,8 @@ msgid ""
 "\\textbf{Starting Resources:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Startressourcen:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:24
@@ -267,7 +282,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung\n"
 "\n"
 
 #. type: multicols
@@ -277,6 +292,8 @@ msgid ""
 "\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
 msgstr ""
+"\\textbf{Gebietsvorrat:} Wenn ihr es wünscht, könnt ihr die II--III-Gebiete gleichmäßig an die Spieler verteilen, statt sie wie vorgeschlagen zu platzieren.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:43
@@ -288,6 +305,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item P × Startgebiete (I)\n"
+"  \\item 4P × Ferne Gebiete (II--III) \n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:47
@@ -296,6 +318,8 @@ msgid ""
 "Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
+"Kontrolliert alle Minen und Siedlungen. (Vergesst nicht die Baumaterialien-Mine in Gebiet I. Jedes II--III-Gebiet beinhaltet eine Mine oder Siedlung mit einem Level III-Kampf.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:51
@@ -304,6 +328,8 @@ msgid ""
 "There are unflagged Mines or Settlements left in map at the end of Round 8.\n"
 "\n"
 msgstr ""
+"Ihr kontrolliert am Ende von Runde 8 nicht alle Minen und Siedlungen auf der Karte.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:58
@@ -315,6 +341,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Runde 5:}\n"
+"\\begin{itemize}\n"
+"  \\item Erhaltet erneut den Effekt eines Felds mit Statuswürfel.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:63
@@ -324,6 +355,9 @@ msgid ""
 "    \\item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III).\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"    \\item Ignoriert alle gelben Linien auf Startgebieten (aber nicht zwischen I- und II--III-Gebieten).\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:65
@@ -332,6 +366,8 @@ msgid ""
 "    \\item You can't build a \\golden\\ Dwelling.\n"
 "\n"
 msgstr ""
+"    \\item Ihr könnt keine \\golden{}-Behausungen bauen.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:72
@@ -345,6 +381,13 @@ msgid ""
 "    \\end{itemize}\n"
 "\n"
 msgstr ""
+"    \\item Ihr könnt anderen Spielern (auch außerhalb eures Zuges) Einheiten geben, wenn einer eurer Helden:\n"
+"    \\begin{itemize}\n"
+"        \\item Auf dem selben Gebiet wie ein Held eines anderen Spielers steht.\n"
+"        \\item In der Stadt eines anderen Spielers steht.\n"
+"        \\item Neben einem Helden eines anderen Spielers steht.\n"
+"    \\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:74
@@ -353,6 +396,8 @@ msgid ""
 "    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.\n"
 "\n"
 msgstr ""
+"    \\item Wenn ihr keine Einheiten in eurem Einheitendeck habt (nach einem Kampf oder wenn ihr keine Einheit behaltet), nehmt alle Einheiten in den Einheitenstapel eurer Fraktion zurück (auch, wenn ein anderer Spieler eine oder mehrere eurer Einheiten hat). Das beinhaltet Einheiten, die ihr anderen Spielern gegeben habt.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:76
@@ -361,6 +406,8 @@ msgid ""
 "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
 "\n"
 msgstr ""
+"    \\item Wenn ihr euch in der Stadt eines anderen Spielers befindet, könnt ihr für ihn oder euch Einheiten rekrutieren oder verstärken. Ihr benötigt dazu die Einwilligung dieses Spielers. Benötigte Behausungen oder die Zitadelle müssen dafür gebaut sein.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:78
@@ -369,6 +416,8 @@ msgid ""
 "    \\item For the last Mine/Settlement battle, add a \\golden\\ Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
 "\n"
 msgstr ""
+"    \\item Dem Kampf um die letzte Mine/Siedlung wird eine neutrale \\golden{}-Einheit hinzugefügt. Der Kampf kann beliebig viele Runden dauern. Ihr könnt nicht die Experten-Diplomatie benutzen, um diesen Kampf zu überspringen!\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:80
@@ -377,6 +426,8 @@ msgid ""
 "    \\item The first time you reach Level IV, gain your second specialty.\n"
 "\n"
 msgstr ""
+"    \\item Wenn ihr zum ersten Mal Stufe 4 erreicht, erhaltet die \"Stufe-4\"-Sonderfähigkeitenkarte.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:82
@@ -385,6 +436,8 @@ msgid ""
 "    \\item When you reach Level IV, move your Token on the Level tracker to Level III.\n"
 "\n"
 msgstr ""
+"    \\item Wenn ihr Stufe 4 erreicht, bewegt euren Stufenmarker zurück auf Stufe 3.\n"
+"\n"
 
 #. type: multicols
 #: coops/emerald_island.tex:89
@@ -398,6 +451,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"    \\item Zusätzlich kann kein Spieler:\n"
+"    \\begin{itemize}\n"
+"        \\item Andere Helden angreifen.\n"
+"        \\item Minen oder Siedlungen einnehmen, die bereits eingenommen wurden.\n"
+"    \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: tikzpicture
 #: coops/emerald_island.tex:121
@@ -408,3 +468,7 @@ msgid ""
 "    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/ammo_cart.png}\n"
 "  };"
 msgstr ""
+"[overlay]\n"
+"  \\node(bg)[anchor=center, opacity=0.07, xshift=-2em, yshift=-23em] at (current page.south) {\n"
+"    \\includegraphics[width=1.2\\paperwidth, keepaspectratio]{\\art/ammo_cart.png}\n"
+"  };"
