De/emerald island (#312)

--- a/translations/dragoncurse_castle.tex/de.po
+++ b/translations/dragoncurse_castle.tex/de.po
@@ -123,7 +123,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
