--- a/translations/the_fractured_kingdoms.tex/de.po
+++ b/translations/the_fractured_kingdoms.tex/de.po
@@ -72,7 +72,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung\n"
 "\n"
 
 #. type: multicols*
