--- a/translations/close_to_enemies.tex/de.po
+++ b/translations/close_to_enemies.tex/de.po
@@ -168,7 +168,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
