--- a/translations/force_of_will.tex/de.po
+++ b/translations/force_of_will.tex/de.po
@@ -110,7 +110,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze\\-Behausung\n"
+"\\textbf{Startgebäude:} \\bronze{}-Behausung\n"
 "\n"
 
 #. type: multicols
