Fix azure glyph in Stand United

--- a/coops/stand_united.tex
+++ b/coops/stand_united.tex
@@ -78,7 +78,7 @@ If at least one player has failed to defeat the Dragon Utopia by the end of Roun
   \item Level VII Combat cannot be skipped by Diplomacy or any other means.
   \item Players can use their Build Token to initiate trade with one other chosen player. The two players can freely exchange Resources and can exchange Artifacts or Spells from their hand as if their Heroes were adjacent.
   \item During the game, players assemble a shared army. Every player can field Units from the shared army during Combat (shared Units' \svg{map} abilities can be activated each Round by only one player).  % no-check-caps
-  \item Upon flagging an Obelisk, discard the top Card from each Neutral Units Deck except \azure\. You can recruit one of these Units. Units recruited this way go into the shared army.
+  \item Upon flagging an Obelisk, discard the top Card from each Neutral Units Deck except \azure{}. You can recruit one of these Units. Units recruited this way go into the shared army.
   \item During Combat at the Dragon Utopia, one of the Neutral \azure\ Units is always the Azure Dragon and the Neutral army uses the AI Deck. Reshuffle the AI Deck and AI Spell Deck at the end of Combat.
   \item After winning Combat at the Dragon Utopia, no Faction Cube is placed on the Dragon Utopia Field. The victorious player puts one of their surviving Faction Units into the shared army and can redistribute their remaining Resources among other players, after which that player gets removed from the game.
 \end{itemize}
