--- a/translations/close_to_enemies.tex/de.po
+++ b/translations/close_to_enemies.tex/de.po
@@ -556,7 +556,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Verteidiger der Siedlungen}}\n"
+"\\subsection*{\\MakeUppercase{Siedlungsverteidiger}}\n"
 "\\begin{itemize}\n"
 "  \\item Die Stärke der Verteidiger wird von der \\textit{Gegnerische Clanarmeen}-Tabelle bestimmt (letzte Zeile).\n"
 "  \\item Nach der Vorbereitung der gegnerischen Armee darf ein Spieler eine gegnerische Einheitenkarte abwerfen und eine neue Einheit derselben Stufe ziehen.\n"
