--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-07-02 10:48+0200\n"
+"POT-Creation-Date: 2025-08-02 19:31+0200\n"
 "PO-Revision-Date: 2025-05-04 14:04+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -165,11 +165,10 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:142 coops/close_to_enemies.tex:143
-#: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
-#: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28
-#: sections/random_scenario.tex:304
+#: coops/sentinels.tex:142 coops/stand_united.tex:87
+#: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
+#: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
+#: sections/credits.tex:28 sections/random_scenario.tex:304
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -202,18 +201,6 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Příprava AI Hrdiny}}\n"
-"\n"
-
-#. type: multicols*
-#: coops/close_to_enemies.tex:132 campaigns/inferno_devilish_plan.tex:138
-#, no-wrap
-msgid ""
-"\\vspace*{\\fill}\n"
-"\\columnbreak\n"
-"\n"
-msgstr ""
-"\\vspace*{\\fill}\n"
-"\\columnbreak\n"
 "\n"
 
 #. type: multicols*
@@ -619,6 +606,18 @@ msgstr ""
 "\\begin{tikzpicture}[overlay]\n"
 "  \\node at (3.5, -2)[opacity=0.2] {\\includegraphics[width=0.45\\linewidth]{\\art/fire_magic.png}};\n"
 "\\end{tikzpicture}\n"
+"\n"
+
+#. type: multicols*
+#: campaigns/inferno_devilish_plan.tex:138
+#, no-wrap
+msgid ""
+"\\vspace*{\\fill}\n"
+"\\columnbreak\n"
+"\n"
+msgstr ""
+"\\vspace*{\\fill}\n"
+"\\columnbreak\n"
 "\n"
 
 #. type: multicols*
