--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -121,15 +121,14 @@ Victory Points are counted in accordance to the Tournament book. Additionally, y
 
   \node[text width=4cm] at (2.5, -3.5) {\footnotesize{\textbf{\textcolor{green!70!black}{Green Borders mean adjacent Tiles.}}}};
 
-  \draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (7, -11);    % Arrow to first green line
-  \draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (9.0, -9.5); % Arrow to second green line
+  \draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (7, -11);
+  \draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (9.0, -9.5);
 
   \greenline{11.4}{-11.2}{13}
   \greenline{7.0}{-11.15}{162}
   \greenline{9.24}{-9.5}{90}
   \greenline{7.8}{-13.75}{-127}
   \greenline{10.5}{-13.75}{-65}
-  % \greenline{12.5}{-13.5}{90}
 
   \arrow{12.35}{-15.7}{-142}
   \arrow{14.4}{-17.6}{38}
