--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -119,7 +119,7 @@ Victory Points are counted in accordance to the Tournament book. Additionally, y
 
   \node at (9, -12) {\includegraphics[width=0.9\paperwidth]{\maps/the_fractured_kingdoms.png}};
 
-  \node[text width=4cm] at (2.5, -3.5) {\footnotesize{\textbf{\textcolor{green!70!black}{Green Borders mean adjacent Tiles.}}}};
+  \node[text width=4cm] at (2.5, -3.5) {\footnotesize{\textbf{\textcolor{green!70!black}{Green borders mean adjacent Tiles.}}}};
 
   \draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (7, -11);
   \draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (9.0, -9.5);
