--- a/translations/the_fractured_kingdoms.tex/pl.po
+++ b/translations/the_fractured_kingdoms.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-09-13 11:25+0200\n"
+"POT-Creation-Date: 2025-09-13 20:37+0200\n"
 "PO-Revision-Date: 2025-03-29 21:01+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -411,6 +411,13 @@ msgid ""
 "  }\n"
 "\n"
 msgstr ""
+"  \\newcommand{\\greenline}[3]{%\n"
+"    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
+"    \\begin{scope}[shift={(#1,#2)}, rotate=#3]\n"
+"      \\draw[green!70!black, line width=5pt, line cap=round] (-0.3,0) -- (0.3,0);\n"
+"    \\end{scope}\n"
+"  }\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:119
@@ -440,9 +447,11 @@ msgstr ""
 #: clash/the_fractured_kingdoms.tex:123
 #, no-wrap
 msgid ""
-"  \\node[text width=4cm] at (2.5, -3.5) {\\footnotesize{\\textbf{\\textcolor{green!70!black}{Green Borders mean adjacent Tiles.}}}};\n"
+"  \\node[text width=4cm] at (2.5, -3.5) {\\footnotesize{\\textbf{\\textcolor{green!70!black}{Green borders mean adjacent Tiles.}}}};\n"
 "\n"
 msgstr ""
+"  \\node[text width=4cm] at (2.5, -3.5) {\\footnotesize{\\textbf{\\textcolor{green!70!black}{\\raggedright Zielone linie \\mbox{oznaczają} \\mbox{sąsiadujące} \\mbox{Kafelki}.}}}};\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:126
@@ -452,6 +461,9 @@ msgid ""
 "  \\draw[-Triangle, green!70!black, line width=1.5pt] (3.2, -3.7) -- (9.0, -9.5);\n"
 "\n"
 msgstr ""
+"  \\draw[-Triangle, green!70!black, line width=1.5pt] (2.2, -4.0) -- (7, -11);\n"
+"  \\draw[-Triangle, green!70!black, line width=1.5pt] (2.2, -4.0) -- (9.0, -9.5);\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:132
@@ -464,6 +476,12 @@ msgid ""
 "  \\greenline{10.5}{-13.75}{-65}\n"
 "\n"
 msgstr ""
+"  \\greenline{11.4}{-11.2}{13}\n"
+"  \\greenline{7.0}{-11.15}{162}\n"
+"  \\greenline{9.24}{-9.5}{90}\n"
+"  \\greenline{7.8}{-13.75}{-127}\n"
+"  \\greenline{10.5}{-13.75}{-65}\n"
+"\n"
 
 #. type: tikzpicture
 #: clash/the_fractured_kingdoms.tex:135
